--- a/banner.yaml
+++ b/banner.yaml
@@ -1,9 +1,19 @@
 ---
-- hosts: all
-  gather_facts: true
-  become: true
-  become_user: root
+- name: Configure the login banner
+  hosts: ios_devices
+  connection: network_cli
+  gather_facts: false
   tasks:
-    - apt:
-        name: nginx
-      when: ansible_os_family == "Debian"
+    - name: Add configure the login banner
+      ios_banner: 
+       banner: exec
+       text: |
+         ****************************************************
+         * Welcome to Ansible AWX Tower Network Automation  *
+         *                      Thank You                   *
+         *    Aaqib Javaid Khan |TAC Engineer| CYBERNET     *
+         ****************************************************
+       state: present 
+    - name: save runnint to start-config when modified
+       ios_config:
+        save_when: modified
