--- a/banner.yaml
+++ b/banner.yaml
@@ -14,6 +14,6 @@
          *    Aaqib Javaid Khan |TAC Engineer| CYBERNET     *
          ****************************************************
        state: present 
-    - name: save runnint to start-config when modified
-       ios_config:
-        save_when: modified
+    - name: save running to start-config when modified
+      ios_config:
+       save_when: modified
