--- a/banner.yaml
+++ b/banner.yaml
@@ -1,21 +1,9 @@
 ---
 - name: Configure the login banner
-  hosts: ios_devices
-  connection: network_cli
-  gather_facts: false
-  tasks:
-  
-    - name: Add configure the login banner
-      ios_banner: 
-      
-        banner: exec
-        text: |
-         ****************************************************
-         * Welcome to Ansible AWX Tower Network Automation  *
-         *                      Thank You                   *
-         *    Aaqib Javaid Khan |TAC Engineer| CYBERNET     *
-         ****************************************************
-        state: present 
-    - name: save running to start-config when modified
-      ios_config:
-        save_when: modified
+  cisco.ios.ios_banner:
+    banner: login
+    text: |
+      this is my login banner
+      that contains a multiline
+      string
+    state: present
