--- a/banner.yaml
+++ b/banner.yaml
@@ -1,9 +1,14 @@
 ---
 - name: Configure the login banner
-  cisco.ios.ios_banner:
-    banner: login
-    text: |
-      this is my login banner
-      that contains a multiline
-      string
-    state: present
+  hosts: ios_devices
+  connection: network_cli
+  gather_facts: false
+  tasks:
+   - name: Configure the login banner
+     cisco.ios.ios_banner:
+     banner: login
+     text: |
+       this is my login banner
+       that contains a multiline
+       string
+     state: present
