--- a/banner.yaml
+++ b/banner.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Configure the login banner
-  hosts: iosxr
+  hosts: ios_devices
   connection: network_cli
   gather_facts: false
+
   tasks:
-    - name: Add configure the login banner
+    - name: Configure the login banner
       ios_banner: 
-      
-        banner: exec
+        banner: login
         text: |
          ****************************************************
          * Welcome to Ansible AWX Tower Network Automation  *
@@ -15,6 +15,6 @@
          *    Aaqib Javaid Khan |TAC Engineer| CYBERNET     *
          ****************************************************
         state: present 
-    - name: save running to start-config when modified
+    - name: save running to startup
       ios_config:
         save_when: modified
