--- a/vlan_config.yml
+++ b/vlan_config.yml
@@ -8,7 +8,10 @@
     vlan_name: TAC VLAN
     interface: Ethernet0/1
   tasks:
-  
+  - name: configure VLAN_ID
+    ios_config:
+     lines:
+       - vlan {{ vlan_id }}
   
   - name: Making Interface {{interface}} trunk and allow VLAN {{vlan_id}}
     ios_l2_interfaces:
