--- a/vlan_config.yml
+++ b/vlan_config.yml
@@ -3,17 +3,13 @@
   hosts: ios
   connection: network_cli
   gather_facts: false
-  vars:
-    vlan_id: 10
-    vlan_name: TAC VLAN
-    interface: Ethernet0/1
   tasks:
-  - name: configure VLAN_ID
-    ios_config:
-     lines:
-       - vlan {{ vlan_id }}
+#  - name: configure VLAN_ID
+#    ios_config:
+ #    lines:
+  #     - vlan {{ vlan_id }}
   
-  - name: Making Interface {{interface}} trunk and allow VLAN {{vlan_id}}
+  - name: Making Interface 
     ios_l2_interfaces:
       config:
       - name: Ethernet0/1
