--- a/banner.yml
+++ b/banner.yml
@@ -6,10 +6,10 @@
   tasks:
     - name: Add login banner
       ios_banner: 
-      banner: exec
-      text: |
+       banner: exec
+       text: |
          ****************************************************
-         *    Welcome to AWX Ansible Network Atomation      *
+         *    Welcome to AWX Ansible Network Automation     *
          *                     Thank You                    *
          *    Aaqib Javaid Khan |TAC Engineer| CYBERNET     *
          ****************************************************
