--- a/banner.yml
+++ b/banner.yml
@@ -9,7 +9,7 @@
        banner: exec
        text: |
          ****************************************************
-         *    Welcome to AWX Ansible Network Automation     *
+         *     Welcome to Ansible Network Automation        *
          *                     Thank You                    *
          *    Aaqib Javaid Khan |TAC Engineer| CYBERNET     *
          ****************************************************
