--- a/banner.yml
+++ b/banner.yml
@@ -15,5 +15,5 @@
          ****************************************************
        state: present 
     - name: save running to startup-config when modified
-      ios_config:
+      cisco.ios.ios_config:
         save_when: modified                                                    
