--- a/vlan_config.yml
+++ b/vlan_config.yml
@@ -1,21 +1,22 @@
 ---
-- name: Merge provided configuration with device configuration
-  cisco.ios.ios_vlans:
-    config:
-      - name: Vlan_10
-        vlan_id: 10
-        state: active
-        shutdown: disabled
-        remote_span: true
-      - name: Vlan_20
-        vlan_id: 20
-        mtu: 610
-        state: active
-        shutdown: enabled
-      - name: Vlan_30
-        vlan_id: 30
-        state: suspend
-        shutdown: enabled
-    state: merged
+- name: Create VLAN on Switches
+  hosts: ios
+  connection: network_cli
+  gather_facts: false
+  tasks:
+  - name: configure VLAN_ID
+    ios_config:
+     lines:
+       - vlan {{ vlan_id }}
+  
+  - name: Making Interface {{interface}} trunk and allow VLAN {{vlan_id}}
+    ios_l2_interfaces:
+      config:
+       - name: Ethernet0/1
+         trunk:
+          allowed_vlans: 10,20,20,30,40
+          native_vlan: 10
+          encapsulation: dot1q
+      state: merged       
 
 
